# rlg

./: .gitignore  README.md  approximate_br.py  architecture.md  eval_checkpoints.py  eval_checkpoints_rm.py  make_configs.py  opt_muon.py  plot_sweep.py  pyproject.toml  train.py  train_and_eval.py  train_mmd_cont.py  train_ppo.py
checkpoints/ppo_goofspiel/: step_00000200.pkl  step_00000400.pkl  step_00000600.pkl  step_00000800.pkl  step_00001000.pkl
configs/: alternating_battleship.yaml  alternating_goofspiel.yaml  alternating_leduc.yaml  entmax_leduc.yaml  entropy.yaml  epochs.yaml  epsilon_goofspiel.yaml  epsilon_leduc.yaml  example.yaml  gumbel_qmmd.yaml  magnet_coefficient.yaml  magnet_experiment.yaml  magnet_interval.yaml  mmd_battleship.yaml  mmd_cont_hunl.yaml  mmd_goofspiel.yaml  mmd_leduc.yaml  mmd_regval.yaml  npg.yaml  obs_noise_sweep.yaml  ppo_battleship.yaml  ppo_goofspiel.yaml  ppo_leduc.yaml  qmmd.yaml  rm_distill_leduc.yaml  rm_leduc.yaml  rm_rnad_leduc.yaml  schedule.yaml  sweep_example.yaml
public_experiments/mmd_battleship/: config.yaml  exploitability.npz
public_experiments/mmd_goofspiel/: config.yaml  exploitability.npz  metrics.npz
public_experiments/mmd_leduc/: config.yaml  exploitability.npz
public_experiments/qmmd/: config.yaml  exploitability.npz
public_experiments/qmmd_mmd/: config.yaml  exploitability.npz  metrics.npz
public_experiments/qmmd_rnad/: config.yaml  exploitability.npz  metrics.npz
public_experiments/rnad_battleship/: config.yaml  exploitability.npz
src/: advantage.py  gumbel.py  policy.py  utils.py
(+120 files in other folders)
