[project]
name = "rlg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flax>=0.12.7",
    "jax>=0.10.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "optax>=0.2.8",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "pyright>=1.1.409",
    "ruff>=0.15.12",
    "chex>=0.1.91",
]

[tool.ruff]
fix = true
indent-width = 2

[tool.ruff.lint]
ignore = [
    "E741",
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
